# python-data-foundations

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: clean_scores.csv  sample_scores.csv
scripts/: clean_scores.py  pandas_demo.py
src/: main.py
src/python_data_foundations/: __main__.py  clean_scores.py  cli.py
src/python_data_foundations.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_clean_scores.py
